# dream3d

./: .gitignore  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json  studio.html  tsconfig.json  viewer.html  vite.config.ts
backend/: README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: generate.py
backend/src/llm/: claude_cli.py
backend/src/log/: audit.py
backend/src/meshy/: cache.py  client.py  gen_params.py
backend/src/pipeline/: asset_provider.py  claude_planner.py  claude_vision_critic.py  disk_cache.py  fix.py  geometry_check.py  layout.py  orchestrator.py  plan_cache.py  response_cache.py
backend/src/pipeline/prompts/: __init__.py  planner_system.md  vision_critic_system.md
backend/src/render/: critic_cameras.py  headless.py  multiangle.py
backend/src/scene/: bbox.py  schema.py
backend/src/server/: asset_bridge.py  job_store.py  static.py
backend/tests/: conftest.py  test_api_generate.py  test_asset_bridge.py  test_asset_provider.py  test_cache_and_audit.py  test_claude_cli.py  test_claude_planner.py  test_claude_vision_critic.py  test_fix.py  test_geometry_check.py  test_layout.py  test_meshy_client.py  test_orchestrator.py  test_render_headless.py
config/: local.example.json  scene-presets.json
docs/: headless-render.md  meshy-api.md
scripts/: critic-render-smoke.mjs  failed-asset-check.mjs  floor-rest-check.mjs  framing-check.mjs  meshy-generate.mjs  meshy-provider-smoke.mjs  meshy-smoke.mjs  pipeline-mock-smoke.mjs  render-smoke.mjs  setup-headless-render.sh  ts-resolve-hook.mjs
(+49 files in other folders)
