[project]
name = "dream3d-backend"
version = "0.1.0"
description = "Python FastAPI backend for the dream3d studio."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
python-preference = "only-system"
